--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -13,7 +13,7 @@ jobs:
         with:
           flutter-version: '3.7.7' # Puedes cambiar la versión de Flutter aquí
       - name: Build the Flutter app
-        run: flutter build web
+        run: flutter build web --web-renderer canvaskit --release
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
