--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "andrea_app_ui",
     "short_name": "andrea_app_ui",
-    "start_url": ".",
+    "start_url": "andrea_app_ui",
     "display": "standalone",
     "background_color": "#0175C2",
     "theme_color": "#0175C2",
