--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -15,7 +15,6 @@ jobs:
       - name: Build the Flutter app
         run: flutter build web --web-renderer canvaskit --release
       - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
+        uses: erickzanardo/flutter-gh-pages@v7
         with:
-          github_token: ${{ secrets.TOKEN }}
-          publish_dir: ./build/web
+          baseHref: /andrea_app_ui/
