--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -18,3 +18,5 @@ jobs:
         uses: bluefireteam/flutter-gh-pages@v7
         with:
           baseHref: /andrea_app_ui/
+          workingDir: ./build/web
+          webRenderer: canvaskit
